<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.example.candystore.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:title="@string/add"
        app:showAsAction="ifRoom"
        android:id="@+id/action_add"/>

    <item android:title="@string/add_icon"
        app:showAsAction="ifRoom"
        android:id="@+id/action_add_icon"
        android:icon="@android:drawable/ic_menu_add"/>

    <!-- YOUR CODE -->
    <item
        android:id="@+id/action_update"
        android:title="@string/update_add"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

</menu>